--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,18 @@
 </head>
 <body>
     <div id="app"></div>
+    <script>
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', function () {
+                navigator.serviceWorker.register('/service-worker.js')
+                .then(registration => {
+                    console.log('SW registrado')
+                })
+                .catch(registrationError => {
+                    console.log('SW Error', registrationError)
+                })
+            })
+        }
+    </script>
 </body>
 </html>
